adding secondry colors

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -11,6 +11,14 @@ $colors: (
         grey: #b8b8b8,
         blue: #4668c0,
     ),
+    secondry: (
+        black: #263238,
+        cyan: var(--clr--cyan),
+        green: #33bd41,
+        red: #c53f3f,
+        purple: #7e57c2,
+        yellow: #ffc100,
+    ),
     social: (
         facebook: #3b5998,
         instagram: #e95950,
