--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -11,7 +11,7 @@ $colors: (
         grey: #b8b8b8,
         blue: #4668c0,
     ),
-    secondry: (
+    card: (
         black: #263238,
         cyan: var(--clr--cyan),
         green: #33bd41,
