adding header, typography, utilities , correct colors and mixins

--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -4,3 +4,9 @@
     box-sizing: border-box;
     font-family: "Roboto", Helvetica, sans-serif;
 }
+html {
+    scroll-behavior: smooth;
+}
+body {
+    background: var(--clr--bg);
+}
