--- a/src/scss/helpers/_placeholders.scss
+++ b/src/scss/helpers/_placeholders.scss
@@ -4,12 +4,9 @@
 %center {
     @include center;
 }
-$justify-content: nth(nth(p.$flex, 1), 2);
-$align-items: nth(nth(p.$flex, 2), 2);
-$flex-direction: nth(nth(p.$flex, 3), 2);
-@each $x in $justify-content {
-    @each $y in $align-items {
-        @each $direction in $flex-direction {
+@each $x in p.$justify-content {
+    @each $y in p.$align-items {
+        @each $direction in p.$flex-direction {
             @include flex-builder($x, $y, $direction);
         }
     }
