--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,13 @@
-@use './base/init';
-@use './variables/_colors.scss';
-
+@import "./base/init";
+@import "./variables/_colors.scss";
+@import "./variables/fonts";
+@import "./variables/constants";
 @import "./helpers/mixins";
+@import "./base/typography";
 
 //pages
 @import "./pages/header";
+@import "./pages/features";
 
 @import "./helpers/placeholders";
+@import "./helpers/utilities";
