--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -5,10 +5,10 @@ $colors: (
             grey: #dedede,
             white: #ffffff,
             primary: (
-                var(--clr-cyan),
+                var(--clr--cyan),
                 #0a1836,
             ),
-            background: (
+            bg: (
                 #f2f2f2,
                 #212121,
             ),
@@ -17,18 +17,18 @@ $colors: (
                 var(--clr--white),
             ),
         ),
-    font: (
-        one: #4d4d4d,
-        two: (
+    f: (
+        1: #4d4d4d,
+        2: (
             var(--clr-font-one),
             var(--clr--white),
         ),
     ),
-    button: (
+    btn: (
         grey: #b8b8b8,
         blue: #4668c0,
     ),
-    card: (
+    crd: (
         black: #263238,
         cyan: var(--clr--cyan),
         green: #33bd41,
@@ -36,7 +36,7 @@ $colors: (
         purple: #7e57c2,
         yellow: #ffc100,
     ),
-    social: (
+    sm: (
         facebook: #3b5998,
         instagram: #e95950,
         linkedin: #007bb5,
