--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -73,13 +73,13 @@ header .img {
     }
 }
 .readMore {
-    font-size: 14px;
+    font-size: $fs5;
     text-align: center;
     color: var(--clr--title);
     bottom: 68px;
     i {
         display: block;
-        font-size: 24px;
+        font-size: $fs3;
         &:nth-of-type(1) {
             opacity: 0.6;
         }
