styling faqs page, add shadow and flex to features card, add some variables

--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -6,6 +6,7 @@ header {
         color: var(--clr-f-2);
         font-weight: $fw-light;
         font-size: $fs5;
+        text-align: center;
         line-height: 20px;
     }
     .title p {
