--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 //pages
 @import "./pages/header";
 @import "./pages/features";
+@import "./pages/faqs";
 
 @import "./helpers/placeholders";
 @import "./helpers/utilities";
