--- a/src/scss/pages/_features.scss
+++ b/src/scss/pages/_features.scss
@@ -15,6 +15,8 @@
         background: var(--clr--white);
         margin-top: 56px;
         padding: 29px;
+        @include flex(space-between, null, column);
+        box-shadow: 2px 2px 2px #00000040;
         //a smart way to generate colors for each card
         //no need to indexes
         @each $group, $content in $colors {
