add contact us to style.scss"

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "./pages/header";
 @import "./pages/features";
 @import "./pages/faqs";
+@import "./pages/aboutUs";
 
 @import "./helpers/placeholders";
 @import "./helpers/utilities";
