--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import "./pages/features";
 @import "./pages/faqs";
 @import "./pages/aboutUs";
+@import "./pages/contactUs";
 
 @import "./helpers/placeholders";
 @import "./helpers/utilities";
