--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import "./pages/faqs";
 @import "./pages/aboutUs";
 @import "./pages/contactUs";
+@import "./pages/statistics";
 
 @import "./helpers/placeholders";
 @import "./helpers/utilities";
