--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -11,6 +11,12 @@ h1,
 h2 {
     font-size: $fs1;
 }
+h3 {
+    font-size: $fs3;
+}
+h6 {
+    font-size: $fs5;
+}
 p {
     font-size: $fs5;
     font-weight: $fw-regular;
