--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import "./pages/aboutUs";
 @import "./pages/contactUs";
 @import "./pages/statistics";
+@import "./pages/footer";
 
 @import "./helpers/placeholders";
 @import "./helpers/utilities";
