--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,5 +14,6 @@
 @import "./pages/statistics";
 @import "./pages/footer";
 
+@import "./helpers/animation";
 @import "./helpers/placeholders";
 @import "./helpers/utilities";
