+ edit features & paragraphs, add new animation moveTop onhover resonsive h1/h2

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -9,7 +9,8 @@ h6 {
 }
 h1,
 h2 {
-    font-size: $fs1;
+    // font-size: $fs1;
+    font-size: clamp(5px, 15vw, #{$fs1});
 }
 h3 {
     font-size: $fs3;
