--- a/src/scss/helpers/_animation.scss
+++ b/src/scss/helpers/_animation.scss
@@ -22,3 +22,19 @@
         transform: translateY(40%);
     }
 }
+@keyframes moveY15 {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(15%);
+    }
+}
+@keyframes moveTop {
+    0% {
+        top: $top-img;
+    }
+    100% {
+        top: 30%;
+    }
+}
