--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -55,6 +55,13 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+@mixin center-x($hadPosition: false) {
+    @if not $hadPosition {
+        position: absolute;
+    }
+    left: 50%;
+    transform: translateX(-50%);
+}
 @mixin size($width: null, $height: $width) {
     @if ($width != null and $height != null) {
         width: $width;
