--- a/src/scss/pages/_aboutUs.scss
+++ b/src/scss/pages/_aboutUs.scss
@@ -14,41 +14,50 @@
     }
 }
 .profile {
-    @include size(66.66vw);
-    @include max-size(384px);
+    overflow: hidden;
+    min-height: 249px;
     margin-inline: auto;
     border-radius: $radius;
     background: var(--clr--bg);
-    h3 {
-        font-size: $fs3;
-        color: var(--clr--title);
-    }
     .public {
-        @include flex(null, null, column);
-        h3 {
-            margin: auto;
-        }
+        width: 100%;
+        position: relative;
+    }
+    h3 {
+        color: var(--clr--title);
+        padding: 5px;
     }
     .img {
         background: var(--clr--primary);
         opacity: 0.9;
-        border-radius: $radius $radius 0 0;
         img {
             display: block;
             margin-inline: auto;
-            max-width: 85.7%;
+            width: 85.7%;
+            z-index: 4;
         }
     }
     .content {
         display: none;
+        position: relative;
+        text-align: center;
+        .desc {
+            width: 71.8%;
+            margin-inline: auto;
+        }
+        h3 {
+            margin-bottom: 10px;
+        }
         p {
             color: var(--clr-f-2);
-            margin-inline: 8.3%;
         }
         ul {
             @include flex(space-between, null);
             margin: auto;
+            margin-top: 10px;
             width: 63.3%;
+            max-width: 249px;
+
             overflow: hidden;
             li {
                 @include flex(center);
@@ -93,14 +102,59 @@
         }
     }
     &.active {
-        height: auto;
-        max-height: unset;
         .public {
-            height: 66.66vw;
-            max-height: 384px;
+            h3 {
+                display: none;
+            }
         }
         .content {
             display: block;
+        }
+    }
+}
+@include mq(900px) {
+    .profile {
+        display: flex;
+        .img {
+            width: 100%;
+            img {
+                width: 249px;
+                max-height: 249px;
+            }
+        }
+        .public {
+            h3 {
+                position: absolute;
+                font-size: clamp(40px, 5vw, 90px);
+                opacity: 0.33;
+                width: 100%;
+                z-index: 0;
+                @include center;
+            }
+        }
+        .content {
+            align-items: center;
+            &,
+            h3 {
+                text-align: left;
+                padding-left: 0;
+            }
+            p {
+                margin-bottom: 24px;
+            }
+            ul {
+                position: absolute;
+                bottom: 0;
+            }
+        }
+        &.active {
+            .content {
+                display: flex !important;
+            }
+            .public {
+                width: 249px;
+                margin: 0;
+            }
         }
     }
 }
