--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./base/typography";
 //components
 @import "./components/topnav";
+@import "./components/contactForm";
 //pages
 @import "./pages/header";
 @import "./pages/features";
