--- a/src/scss/helpers/_utilities.scss
+++ b/src/scss/helpers/_utilities.scss
@@ -4,6 +4,7 @@
     padding-bottom: 68px;
 }
 .container {
+    position: relative;
     width: math.div(4, 6) * 100%;
     max-width: 923px;
     margin-inline: auto;
