contact form script, orginize the js file

--- a/src/scss/components/_contactForm.scss
+++ b/src/scss/components/_contactForm.scss
@@ -1,4 +1,8 @@
 .contactForm {
+    display: none;
+    &.active {
+        display: block;
+    }
     position: fixed;
     top: 68px;
     left: 0;
