solving the footer issiu
when you click the form contact button, the footer will float above the form

--- a/src/scss/components/_contactForm.scss
+++ b/src/scss/components/_contactForm.scss
@@ -10,6 +10,7 @@
     background: #000000dd;
     backdrop-filter: blur(10px);
     .container {
+        position: relative;
         max-width: 530px;
         min-height: 538px;
         @extend %center;
