add new conditon to topnavDef function"

--- a/src/scss/pages/_contactUs.scss
+++ b/src/scss/pages/_contactUs.scss
@@ -23,6 +23,10 @@
     p {
         padding-left: 9px;
     }
+    a {
+        color: inherit;
+        text-decoration: underline;
+    }
     button {
         background: var(--clr-crd-green);
         color: var(--clr--white);
