--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -20,7 +20,7 @@ $colors: (
     f: (
         1: #4d4d4d,
         2: (
-            var(--clr-font-one),
+            var(--clr-f-1),
             var(--clr--white),
         ),
     ),
