--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -22,3 +22,14 @@ p {
     font-size: $fs5;
     font-weight: $fw-regular;
 }
+@include mq($lg) {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p {
+        text-align: left;
+    }
+}
