--- a/src/scss/pages/_contactUs.scss
+++ b/src/scss/pages/_contactUs.scss
@@ -13,10 +13,11 @@
             margin-bottom: 14px;
         }
         span {
+            @include size(40px);
+            @include flex(center);
             font-size: $fs-contact;
             color: var(--clr--white);
             background: var(--clr-crd-yellow);
-            padding: 3px 11px;
             border-radius: $radius;
         }
     }
@@ -34,6 +35,41 @@
         padding: 7px;
         width: 100%;
         font-size: $fs-contact;
+        font-weight: $fw-bold;
         cursor: pointer;
+    }
+    br {
+        display: none;
+    }
+    @include mq($lg) {
+        .container {
+            display: grid;
+            grid-template-columns: 35% auto;
+            column-gap: 3.3%;
+            & > *:not(:last-child) {
+                margin-bottom: 15px;
+            }
+        }
+        button {
+            max-width: 144px;
+            margin-inline: auto;
+            margin-bottom: 0 !important;
+            max-height: 48px;
+        }
+        li:not(:last-child) {
+            margin-bottom: 12px;
+        }
+        br {
+            display: initial;
+        }
+        .img {
+            grid-column-start: 1;
+            grid-row: 1 / span 3;
+            &:before {
+                top: 0 !important;
+                left: 0 !important;
+                transform: unset !important;
+            }
+        }
     }
 }
