finish the sticky navbar

--- a/src/scss/components/_topnav.scss
+++ b/src/scss/components/_topnav.scss
@@ -1,11 +1,18 @@
 .topnav {
     width: 100%;
-    position: fixed;
     top: 0;
     z-index: 7;
     padding: 10px 0;
-    background: var(--clr--bg);
-    box-shadow: 0px -6px 16px #0000009e;
+    &.sticky {
+        position: fixed;
+        background: var(--clr--bg);
+        box-shadow: 0px -6px 16px #0000009e;
+        margin-bottom: 0;
+        //add padding to the next element
+        & + * {
+            padding-top: 68px;
+        }
+    }
     .container {
         @include flex(space-between, center);
     }
